# Szaklon-api

./: Cargo.toml  Dockerfile  README.md  config-prod.toml  config.toml
migrations/2019-05-08-102015_create_users/: up.sql
migrations/2019-05-11-132251_create_songs/: up.sql
migrations/2019-05-11-132536_create_history/: up.sql
migrations/2019-05-15-192455_featured_song/: down.sql  up.sql
migrations/2019-05-15-235830-create_logs/: up.sql
migrations/2019-05-27-154232_delete_user/: down.sql  up.sql
migrations/2019-05-27-192057_logs_add_user_agent_ip_addr/: down.sql  up.sql
src/: auth.rs  db.rs  init.rs  logs.rs  main.rs  routes.rs  songs.rs  utils.rs
src/db/: auth.rs  logs.rs  models.rs  schema.rs  songs.rs
