[package]
name = "szaklon-api"
version = "0.1.0"
authors = ["Mateusz Sieczko <arvamer@gmail.com>"]
edition = "2018"

[features]
bundled = ["libsqlite3-sys/bundled"]

[dependencies]
actix-web = { version ="1.0.0-rc", features = ["ssl"] }
actix = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.6.1"
rand = "0.6.5"
base64 = "0.10.1"
failure = "0.1.5"
failure_derive = "0.1.5"
diesel = { version = "1.4.2", features = ["sqlite", "chrono"] }
rust-argon2 = "0.4.0"
futures = "0.1.26"
log = "0.4.6"
unicode-normalization = "0.1.8"
chrono = { version = "0.4.6", features = ["serde"] }
libsqlite3-sys = "0.9.3"
toml = "0.5.0"
reqwest = "0.9.16"
console = "0.7.5"
indicatif = "0.11.0"
parking_lot = "0.8.0"
uaparser = "0.3.1"
lazy_static = "1.3.0"
openssl = "0.10.23"
